correctly handle z-index in dynlayout correctly handle selection state in wp list on navpage

--- a/viewer/avnav_viewer.less
+++ b/viewer/avnav_viewer.less
@@ -604,7 +604,7 @@ html,body {
   left:0px;
   bottom: 0px;
   width: 8.7em;
-  z-index: 200;
+  z-index: 100;
   .nightColors();
 }
 
